--- a/pages/projects.html
+++ b/pages/projects.html
@@ -92,7 +92,7 @@
                 <h5 class="card-title">Eye Movement</h5>
                 <p class="card-text">Another Week 5 project with the <a href="https://xpro.mit.edu/"
                         target="_blank">MIT xPro</a> <span>Coding Bootcamp</span> and was coded with vanilla HTML, CSS, and JavaScript.</p>
-                <p class="card-text">Custom features were added on top of the base project, see video or <a href="https://github.com/codeTrackLift/eyemovement" target="_blank">readme</a> for details.
+                <p class="card-text">Custom features were added on top of the base project, see <a href="https://github.com/codeTrackLift/eyemovement" target="_blank"> Readme</a> for details.
                 <div class="btnContainer">
                     <a href="https://codetracklift.github.io/eyemovement/" class="btn btn-secondary" target="_blank">Try Demo</a>
                     <a href="https://github.com/codeTrackLift/eyemovement" class="btn btn-secondary btnRepo "
@@ -110,7 +110,7 @@
                 <p class="card-text">This is my Week 5 project with the <a href="https://xpro.mit.edu/"
                         target="_blank">MIT xPro</a> <span>Coding Bootcamp</span> and was coded with vanilla HTML, CSS,
                     and JavaScript.</p>
-                <p class="card-text">Custom features were added on top of the base project, see video or <a href="https://github.com/codeTrackLift/pacmen_factory" target="_blank">readme</a> for details.
+                <p class="card-text">Custom features were added on top of the base project, see <a href="https://github.com/codeTrackLift/pacmen_factory" target="_blank">Readme</a> for details.
                 <div class="btnContainer">
                     <a href="https://codetracklift.github.io/pacmen_factory/" class="btn btn-secondary" target="_blank">Try Demo</a>
                     <a href="https://github.com/codeTrackLift/pacmen_factory" class="btn btn-secondary btnRepo "
