proj img pad sizing

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -87,7 +87,7 @@
     <div id='myProjects' class="row container-fluid justify-content-center">
 
         <div class="card col-sm-4" style="width: 18rem;">
-            <img src="../pics/projects/animatedHead.gif" class="card-img-top mx-auto py-4" alt="Animated head image" style="width:12rem;">
+            <img src="../pics/projects/animatedHead.gif" class="card-img-top mx-auto pt-4" alt="Animated head image" style="width:10rem;">
             <div class="card-body">
                 <h5 class="card-title">Eye Movement</h5>
                 <p class="card-text">Another Week 5 project with the <a href="https://xpro.mit.edu/"
@@ -102,9 +102,7 @@
         </div>
 
         <div class="card col-sm-4" style="width: 18rem;">
-            <!-- <iframe class='container-fluid ratio ratio-1x1 pt-4' src="https://youtube.com/embed/JywuU_yC3PE" frameborder="0" allowfullscreen>
-            </iframe> -->
-            <img src="../pics/pacman/aquaPacMan.gif" class="card-img-top mx-auto pt-4" alt="Aqua-PacMan animated gif." style="width:12rem;">
+            <img src="../pics/pacman/aquaPacMan.png" class="card-img-top mx-auto pt-4" alt="Aqua-PacMan animated gif." style="width:10rem;">
             <div class="card-body">
                 <h5 class="card-title">PacMan Factory</h5>
                 <p class="card-text">This is my Week 5 project with the <a href="https://xpro.mit.edu/"
@@ -120,8 +118,8 @@
         </div>
 
         <div class="card col-sm-4" style="width: 18rem;">
-            <img src="../pics/pacman/pacmanMiniGame.gif" class="card-img-top mx-auto py-4" alt="Pac Man image"
-                style="width:10rem;">
+            <img src="../pics/pacman/pacmanMiniGame.gif" class="card-img-top mx-auto pt-4" alt="Pac Man image"
+                style="width:8rem;">
             <div class="card-body">
                 <h5 class="card-title">Pac-Man Mini-Game</h5>
                 <p class="card-text">This is my Week 3 project with the <a href="https://xpro.mit.edu/"
@@ -139,11 +137,11 @@
         </div>
 
         <div class="card col-sm-4" style="width: 18rem;">
-            <img src="../pics/mermaid_camera.gif" class="card-img-top py-2" alt="...">
+            <img src="../pics/mermaid_camera.gif" class="card-img-top pt-4 mx-auto" alt="Mermaid camera logo" style="width:12rem;">
             <div class="card-body">
                 <h5 class="card-title">Photographer Landingpage</h5>
-                <p class="card-text">Need a photography session in the Philadelphia / King of Prussia area?</p>
                 <p class="card-text"><a href="https://www.lmnophoto.biz" target="_blank">LMNOPhoto.biz</a> was my first freelance project and was completed using <a href="https://getbootstrap.com/docs/5.1/getting-started/introduction/" target="_blank">Bootstrap</a> and <a href="https://scrollmagic.io/" target="_blank">ScrollMagic</a>.</p>
+                <p class="card-text">Need a photography session in the Philadelphia / King of Prussia area?</p>
                 <div class="btnContainer">
                     <a href="https://www.lmnophoto.biz/" class="btn btn-secondary" target="_blank">Visit Site</a>
                     <a href="https://github.com/codeTrackLift/lmnophoto" class="btn btn-secondary btnRepo"
@@ -153,7 +151,7 @@
         </div>
 
         <div class="card col-sm-4" style="width:18rem;">
-            <img src="../pics/odin-calc.ico" class="card-img-top px-4" alt="Calculator image">
+            <img src="../pics/odin-calc.ico" class="card-img-top px-5 pt-2" alt="Calculator image">
             <div class="card-body">
                 <h5 class="card-title">JavaScript Calculator</h5>
                 <p class="card-text">My <span>third JavaScript Project</span>, this was also completed as part of <a
@@ -187,8 +185,8 @@
         </div>
 
         <div class="card col-sm-4" style="width: 18rem;">
-            <img src="../pics/rock-paper-scissors.png" class="card-img-top"
-                alt="Screenshot of a Rock, Paper, Scissors project.">
+            <img src="../pics/rock-paper-scissors.png" class="card-img-top mx-auto"
+                alt="Screenshot of a Rock, Paper, Scissors project." style="width:12rem;">
             <div class="card-body">
                 <h5 class="card-title">Rock, Paper, Scissors</h5>
                 <p class="card-text">My <span>first JavaScript project</span>, this was completed as part of <a
@@ -205,8 +203,8 @@
         </div>
 
         <div class="card col-sm-4" style="width: 18rem;">
-            <img src="../pics/odin-landingpage.jpg" class="card-img-top"
-                alt="Screenshot of a Rock, Paper, Scissors project.">
+            <img src="../pics/odin-landingpage.jpg" class="card-img-top mx-auto pt-4"
+                alt="Screenshot of a Rock, Paper, Scissors project." style="width:12rem;">
             <div class="card-body">
                 <h5 class="card-title">Landingpage Project</h5>
                 <p class="card-text">My <span>first Landingpage</span>, this was completed as part of <a
