pm name rem hypen

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -234,7 +234,7 @@
                     aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
                     <h6>blog<span style='color:dodgerblue'>[</span><span style="color:cornflowerblue">3</span><span
                             style='color:dodgerblue'>]</span></h6>
-                    <h5>Pac-Man Mini-Game</h5>
+                    <h5>PacMan Mini-Game</h5>
                 </button>
             </h2>
             <div id="blog3" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingOne">
@@ -251,7 +251,7 @@
                                     </div>
                                     <div class="h6">
                                         Starter code was provided and the project scope included coding a '<span
-                                            style="color:white;">Pac-Man Factory</span>' with 2D hard-coded movement,
+                                            style="color:white;">PacMan Exercise</span>' with 2D hard-coded movement,
                                         boundary response, and
                                         alternating images to animate horizontal movement.
                                     </div>
@@ -265,14 +265,14 @@
                         </div>
                         <div class="row mx-auto">
                             <img src="../pics/pacman/pacman_icon.png"
-                                class='d-none d-sm-block img-fluid col-sm-2 m-auto p-4' alt="Pac-Man chasing logo."
+                                class='d-none d-sm-block img-fluid col-sm-2 m-auto p-4' alt="PacMan chasing logo."
                                 style="max-width:25vw;">
                             <div class="col-sm-10 m-auto" style="max-width: 640px;">
                                 <p class="narrowText">I decided to add some additional features: <span
                                         style="color:white;">user
                                         controls</span>, image support for vertical movement, and integration of the
                                     previous 'Magic Ball
-                                    Challenge' to give Pac-Man something to do. Check out the images and write-up below
+                                    Challenge' to give PacMan something to do. Check out the images and write-up below
                                     for more details.
                                 </p>
                             </div>
@@ -288,7 +288,7 @@
                             <p class='mx-auto col-sm-4'>Image 1 shows all the <a
                                     href="https://developer.mozilla.org/en-US/docs/Glossary/Global_variable"
                                     target="'_blank">Global
-                                    Variables</a>. Additional Pac-Man images were created for vertical movement and then
+                                    Variables</a>. Additional PacMan images were created for vertical movement and then
                                 included in the
                                 'pacArray' variable.</p>
                             <p class='mx-auto col-sm-4'>I used the <a
@@ -296,7 +296,7 @@
                                     target="_blank">getElementById method</a> to assign aspects of the HTML that would
                                 later be
                                 manipulated by JavaScript.</p>
-                            <p class='mx-auto col-sm-4'>Global variables were also assigned for Pac-Man and the Ball to
+                            <p class='mx-auto col-sm-4'>Global variables were also assigned for PacMan and the Ball to
                                 enable
                                 movement and collision detection.</p>
                         </div>
@@ -340,14 +340,14 @@
                                 <h6>Image 4</h6>
                                 <a href="../pics/pacman/pacman_pacman.png" target="_blank">
                                     <img class="img-fluid" src="../pics/pacman/pacman_pacman.png"
-                                        alt="Screenshot of JavaScript showing functions for Pac-Man's movement.">
+                                        alt="Screenshot of JavaScript showing functions for PacMan's movement.">
                                 </a>
                             </div>
-                            <p class="narrowText">Image 4 shows the functions for the Pac-Man element. The Run function
+                            <p class="narrowText">Image 4 shows the functions for the PacMan element. The Run function
                                 manages which
-                                image is shown then calls the Move function, which changes Pac-Man's position on the
+                                image is shown then calls the Move function, which changes PacMan's position on the
                                 screen. The
-                                checkCollison and checkLimits functions check for Pac-Man contacting a boundary or the
+                                checkCollison and checkLimits functions check for PacMan contacting a boundary or the
                                 ball. </p>
                         </div>
                         <div class="col-sm-5">
@@ -365,7 +365,7 @@
                     <div class="container-fluid row">
                         <div class="col-sm-6 my-auto text-center">
                             <h6>Click Below to Play</h6>
-                            <h5><a href="https://codetracklift.github.io/pacman" target="_blank">Pac-Man Mini-Game</a>
+                            <h5><a href="https://codetracklift.github.io/pacman" target="_blank">PacMan Mini-Game</a>
                             </h5>
                             <p>Thank you for visiting, and happy coding!</p>
                         </div>
