--- a/pages/projects.html
+++ b/pages/projects.html
@@ -121,7 +121,7 @@
             <img src="../pics/pacman/pacmanMiniGame.gif" class="card-img-top mx-auto pt-4" alt="Pac Man image"
                 style="width:8rem;">
             <div class="card-body">
-                <h5 class="card-title">Pac-Man Mini-Game</h5>
+                <h5 class="card-title">PacMan Mini-Game</h5>
                 <p class="card-text">This is my Week 3 project with the <a href="https://xpro.mit.edu/"
                         target="_blank">MIT xPro</a> <span>Coding Bootcamp</span> and was coded with vanilla HTML, CSS,
                     and JavaScript.</p>
