--- a/pages/projects.html
+++ b/pages/projects.html
@@ -72,10 +72,16 @@
 
     <section id="typeWriterSection">
         <figure id='typeWriter' class="mx-auto">
-            <h2 id="typeWriter1"><span style='color:darkorchid;'>while</span> (<span style="color:cornflowerblue">alive</span>) {</h2>
-            <h2 id="typeWriter2"><span style='color:rgb(50,50,50);text-shadow:none;'>__</span><span style='color:chocolate'>code</span>()<span style='color:gray;'>;</span></h2>
-            <h2 id="typeWriter3"><span style='color:rgb(50,50,50);text-shadow:none;'>__</span><span style='color:chocolate'>track</span>(<span style='color:cornflowerblue;'>macros</span>)<span style='color:gray;'>;</span></h2>
-            <h2 id="typeWriter4"><span style='color:rgb(50,50,50);text-shadow:none;'>__</span><span style='color:chocolate'>lift</span>(<span style='color:cornflowerblue'>weights</span>)<span style='color:gray;'>;</span></h2>
+            <h2 id="typeWriter1"><span style='color:darkorchid;'>while</span> (<span
+                    style="color:cornflowerblue">alive</span>) {</h2>
+            <h2 id="typeWriter2"><span style='color:rgb(50,50,50);text-shadow:none;'>__</span><span
+                    style='color:chocolate'>code</span>()<span style='color:gray;'>;</span></h2>
+            <h2 id="typeWriter3"><span style='color:rgb(50,50,50);text-shadow:none;'>__</span><span
+                    style='color:chocolate'>track</span>(<span style='color:cornflowerblue;'>macros</span>)<span
+                    style='color:gray;'>;</span></h2>
+            <h2 id="typeWriter4"><span style='color:rgb(50,50,50);text-shadow:none;'>__</span><span
+                    style='color:chocolate'>lift</span>(<span style='color:cornflowerblue'>weights</span>)<span
+                    style='color:gray;'>;</span></h2>
             <h2 id="typeWriter5">}</h2>
         </figure>
     </section>
@@ -87,33 +93,38 @@
     <div id='myProjects' class="row container-fluid justify-content-center">
 
         <div class="card col-sm-4" style="width: 18rem;">
-            <img src="../pics/projects/animatedHead.gif" class="card-img-top mx-auto pt-4" alt="Animated head image" style="width:10rem;">
+            <img src="../pics/projects/animatedHead.gif" class="card-img-top mx-auto pt-4" alt="Animated head image"
+                style="width:10rem;">
             <div class="card-body">
                 <h5 class="card-title">Eye Movement</h5>
-                <p class="card-text">Another Week 5 project with the <a href="https://xpro.mit.edu/"
-                        target="_blank">MIT xPro</a> <span>Coding Bootcamp</span> and was coded with vanilla HTML, CSS, and JavaScript.</p>
-                <p class="card-text">Custom features were added on top of the base project, see <a href="https://github.com/codeTrackLift/eyemovement" target="_blank"> Readme</a> for details.
-                <div class="btnContainer">
-                    <a href="https://codetracklift.github.io/eyemovement/" class="btn btn-secondary" target="_blank">Try Demo</a>
-                    <a href="https://github.com/codeTrackLift/eyemovement" class="btn btn-secondary btnRepo "
-                        target="'_blank">View Repo</a>
-                </div>
+                <p class="card-text">This <a href="https://xpro.mit.edu/" target="_blank">MIT xPro</a> <span>
+                        Bootcamp Project</span> demonstrates use of 'onmouse' and 'ontouch' event handlers.</p>
+                <p class="card-text"><span>Custom CSS</span> 'aesthetics' and 'typewriter' text was added, see <a
+                        href="https://github.com/codeTrackLift/eyemovement" target="_blank"> Readme</a>.
+                    <div class="btnContainer">
+                        <a href="https://codetracklift.github.io/eyemovement/" class="btn btn-secondary"
+                            target="_blank">Try Demo</a>
+                        <a href="https://github.com/codeTrackLift/eyemovement" class="btn btn-secondary btnRepo "
+                            target="'_blank">View Repo</a>
+                    </div>
             </div>
         </div>
 
         <div class="card col-sm-4" style="width: 18rem;">
-            <img src="../pics/pacman/aquaPacMan.png" class="card-img-top mx-auto pt-4" alt="Aqua-PacMan animated gif." style="width:10rem;">
+            <img src="../pics/pacman/aquaPacMan.png" class="card-img-top mx-auto pt-4" alt="Aqua-PacMan animated gif."
+                style="width:10rem;">
             <div class="card-body">
                 <h5 class="card-title">PacMan Factory</h5>
-                <p class="card-text">This is my Week 5 project with the <a href="https://xpro.mit.edu/"
-                        target="_blank">MIT xPro</a> <span>Coding Bootcamp</span> and was coded with vanilla HTML, CSS,
-                    and JavaScript.</p>
-                <p class="card-text">Custom features were added on top of the base project, see <a href="https://github.com/codeTrackLift/pacmen_factory" target="_blank">Readme</a> for details.
-                <div class="btnContainer">
-                    <a href="https://codetracklift.github.io/pacmen_factory/" class="btn btn-secondary" target="_blank">Try Demo</a>
-                    <a href="https://github.com/codeTrackLift/pacmen_factory" class="btn btn-secondary btnRepo "
-                        target="'_blank">View Repo</a>
-                </div>
+                <p class="card-text">This <a href="https://xpro.mit.edu/" target="_blank">MIT xPro</a> <span>
+                        Bootcamp Project</span> demonstrates use of array methods and DOM manipulation.</p>
+                <p class="card-text"><span>Custom features</span> include an 'Aqua' theme and <em>ZAP!</em> PacMan
+                    button, see <a href="https://github.com/codeTrackLift/pacmen_factory" target="_blank">Readme</a>.
+                    <div class="btnContainer">
+                        <a href="https://codetracklift.github.io/pacmen_factory/" class="btn btn-secondary"
+                            target="_blank">Try Demo</a>
+                        <a href="https://github.com/codeTrackLift/pacmen_factory" class="btn btn-secondary btnRepo "
+                            target="'_blank">View Repo</a>
+                    </div>
             </div>
         </div>
 
@@ -122,11 +133,10 @@
                 style="width:8rem;">
             <div class="card-body">
                 <h5 class="card-title">PacMan Mini-Game</h5>
-                <p class="card-text">This is my Week 3 project with the <a href="https://xpro.mit.edu/"
-                        target="_blank">MIT xPro</a> <span>Coding Bootcamp</span> and was coded with vanilla HTML, CSS,
-                    and JavaScript.</p>
-                <p class="card-text">This 'mini-game' accepts keyboard, mouse, and mobile screen inputs! See <a
-                        href='../pages/blog.html#blog3'>Blog Post</a>.</p>
+                <p class="card-text">This coding exercise was <span>customized</span> into a '<span>mini-game</span>'
+                    with collision detection and score tracking. </p>
+                <p class="card-text">This is <span>fully responsive</span> and accepts keyboard, mouse, and mobile
+                    screen inputs! See <a href='../pages/blog.html#blog3'>Blog Post</a>.</p>
                 <div class="btnContainer">
                     <a href="https://codetracklift.github.io/pacman/" class="btn btn-secondary" target="_blank">Play
                         Game</a>
@@ -137,10 +147,15 @@
         </div>
 
         <div class="card col-sm-4" style="width: 18rem;">
-            <img src="../pics/mermaid_camera.gif" class="card-img-top pt-4 mx-auto" alt="Mermaid camera logo" style="width:12rem;">
+            <img src="../pics/mermaid_camera.gif" class="card-img-top pt-4 mx-auto" alt="Mermaid camera logo"
+                style="width:12rem;">
             <div class="card-body">
                 <h5 class="card-title">Photographer Landingpage</h5>
-                <p class="card-text"><a href="https://www.lmnophoto.biz" target="_blank">LMNOPhoto.biz</a> was my first freelance project and was completed using <a href="https://getbootstrap.com/docs/5.1/getting-started/introduction/" target="_blank">Bootstrap</a> and <a href="https://scrollmagic.io/" target="_blank">ScrollMagic</a>.</p>
+                <p class="card-text"><a href="https://www.lmnophoto.biz" target="_blank">LMNOPhoto.biz</a> was my first
+                    freelance project and was completed using <a
+                        href="https://getbootstrap.com/docs/5.1/getting-started/introduction/"
+                        target="_blank">Bootstrap</a> and <a href="https://scrollmagic.io/"
+                        target="_blank">ScrollMagic</a>.</p>
                 <p class="card-text">Need a photography session in the Philadelphia / King of Prussia area?</p>
                 <div class="btnContainer">
                     <a href="https://www.lmnophoto.biz/" class="btn btn-secondary" target="_blank">Visit Site</a>
