--- a/pages/construction.html
+++ b/pages/construction.html
@@ -41,8 +41,8 @@
         <h4 class='animationFlipIn'>This page is currently under construction...</h4>
     </figure>
 
-    <footer class="container-fluid">
-        <p>Copyright ©
+    <footer id="footer" class="container-fluid">
+        <!-- <p>Copyright ©
             <script>
                 document.write(new Date().getFullYear())
             </script>
@@ -56,12 +56,15 @@
         <a href="https://twitter.com/codeTrackLift" target="_blank"><img class="socialLogo"
                 src="../pics/Twitter_social_icons-circle-white.png" alt="Twitter Icon"></a>
         <a href="https://www.linkedin.com/in/codebypete/" target="_blank"><img class="socialLogo"
-                src="../pics/linkedin_white.png" alt="LinkedIn Icon"></a>
+                src="../pics/linkedin_white.png" alt="LinkedIn Icon"></a> -->
     </footer>
 
     <!-- JS Libraries -->
     <script src="../libraries/bootstrap.min.js"></script>
     <!-- <script src="../libraries/ScrollMagic.min.js"></script> -->
+
+    <script src="../js/footer.js"></script>
+    <script>injectMyFooter()</script>
 </body>
 
 </html>
