--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -150,7 +150,8 @@
 
     </section>
 
-    <footer class="container-fluid">
+    <footer id="footer" class="container-fluid">
+    <!-- <footer class="container-fluid">
         <p>Copyright ©
             <script>
                 document.write(new Date().getFullYear())
@@ -165,12 +166,16 @@
         <a href="https://twitter.com/codeTrackLift" target="_blank"><img class="socialLogo"
                 src="../pics/Twitter_social_icons-circle-white.png" alt="Twitter Icon"></a>
         <a href="https://www.linkedin.com/in/codebypete/" target="_blank"><img class="socialLogo"
-                src="../pics/linkedin_white.png" alt="LinkedIn Icon"></a>
+                src="../pics/linkedin_white.png" alt="LinkedIn Icon"></a> -->
     </footer>
 
     <!-- JS Libraries -->
     <script src="../libraries/bootstrap.min.js"></script>
     <!-- <script src="../libraries/ScrollMagic.min.js"></script> -->
+
+    <!-- My JS -->
+    <script src="../js/footer.js"></script>
+    <script>setTimeout(injectMyFooter,4000)</script>
 </body>
 
 </html>
