--- a/pages/contact.html
+++ b/pages/contact.html
@@ -146,7 +146,8 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1976040.4504721882!2d-76.43266417409015!3d39.943936309783176!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c6c191f3adf4a9%3A0x4066eeee7bc551d0!2sPhiladelphia%20Metropolitan%20Area!5e1!3m2!1sen!2sus!4v1646411057945!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe></iframe>
     </div>
         
-    <footer class="container-fluid">
+    <footer id="footer" class="container-fluid">
+    <!-- <footer class="container-fluid">
         <p>Copyright ©
             <script>
                 document.write(new Date().getFullYear())
@@ -161,12 +162,16 @@
         <a href="https://twitter.com/codeTrackLift" target="_blank"><img class="socialLogo"
                 src="../pics/Twitter_social_icons-circle-white.png" alt="Twitter Icon"></a>
         <a href="https://www.linkedin.com/in/codebypete/" target="_blank"><img class="socialLogo"
-                src="../pics/linkedin_white.png" alt="LinkedIn Icon"></a>
+                src="../pics/linkedin_white.png" alt="LinkedIn Icon"></a> -->
     </footer>
 
     <!-- JS Libraries -->
     <script src="../libraries/bootstrap.min.js"></script>
     <!-- <script src="../libraries/ScrollMagic.min.js"></script> -->
+
+    <!-- My JS -->
+    <script src="../js/footer.js"></script>
+    <script>injectMyFooter()</script>
 </body>
 
 </html>
