--- a/pages/blog.html
+++ b/pages/blog.html
@@ -279,14 +279,11 @@
                                     </div>
                                 </div>
                             </div>
-
                         </div>
-
                     </div>
                 </div>
             </div>
-        </div>
-
+        </div> <!-- accodion-item closing div -->
 
         <div class="accordion-item">
             <h2 class="accordion-header">
@@ -440,7 +437,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> <!-- accodion-item closing div -->
 
         <div class="accordion-item">
             <h2 class="accordion-header">
@@ -627,7 +624,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> <!-- accodion-item closing div -->
 
         <div class="accordion-item">
             <h2 class="accordion-header">
@@ -699,8 +696,7 @@
                                 target="_blank">GitHub Documentation Link</a>.</li>
                     </ol>
                     <p style="padding-top:-1rem; padding-bottom:2rem;">Please let me know with any suggestions, or
-                        comments. Thank
-                        you again for visiting my site, and happy coding!</p>
+                        comments. Thank you again for visiting my site, and happy coding!</p>
                     <div>
                         <p style="text-align:end;font-style:italic;color:white;"><img src="../pics/profilepic.jpg"
                                 alt="Picture of Pete" style="width:5rem;border-radius:50%;margin:0 2rem -2rem 0;"> -
@@ -710,7 +706,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> <!-- accodion-item closing div -->
 
         <div class="accordion-item">
             <h2 class="accordion-header">
@@ -756,32 +752,14 @@
                     <p style="text-align:end;font-style:italic;padding:0;color:white;">Student @ MIT xPro</p>
                 </div>
             </div>
-        </div>
-    </div>
+        </div><!-- accodion-item closing div -->
 
     </div> <!-- myBlog closing div -->
 
-    <footer id="footer" class="container-fluid">
-        <!-- <p>Copyright ©
-            <script>
-                document.write(new Date().getFullYear())
-            </script>
-            <img class='d-none d-sm-inline' src="../pics/pharma2code_icon.gif" style='height: 2rem;'
-                alt="My 'Pharma 2 Code' Logo.">
-            <span style="color:white;">code</span><span style="color:#00857c;">By</span><span
-                style="color:lime;">Pete</span>
-        </p>
-        <a href="https://github.com/codetracklift" target="_blank"><img class="socialLogo"
-                src="../pics/GitHub-Mark-Light-64px.png" alt="GitHub Icon"></a>
-        <a href="https://twitter.com/codeTrackLift" target="_blank"><img class="socialLogo"
-                src="../pics/Twitter_social_icons-circle-white.png" alt="Twitter Icon"></a>
-        <a href="https://www.linkedin.com/in/codebypete/" target="_blank"><img class="socialLogo"
-                src="../pics/linkedin_white.png" alt="LinkedIn Icon"></a> -->
-    </footer>
+    <footer id="footer" class="container-fluid"></footer>
 
     <!-- JS Libraries -->
     <script src="../libraries/bootstrap.min.js"></script>
-    <!-- <script src="../libraries/ScrollMagic.min.js"></script> -->
     
     <!-- My JS -->
     <script src='../js/blog.js'></script>
