--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -150,32 +150,14 @@
 
     </section>
 
-    <footer id="footer" class="container-fluid">
-    <!-- <footer class="container-fluid">
-        <p>Copyright ©
-            <script>
-                document.write(new Date().getFullYear())
-            </script>
-            <img class='d-none d-sm-inline' src="../pics/pharma2code_icon.gif" style='height: 2rem;'
-                alt="My 'Pharma 2 Code' Logo.">
-            <span style="color:white;">code</span><span style="color:#00857c;">By</span><span
-                style="color:lime;">Pete</span>
-        </p>
-        <a href="https://github.com/codetracklift" target="_blank"><img class="socialLogo"
-                src="../pics/GitHub-Mark-Light-64px.png" alt="GitHub Icon"></a>
-        <a href="https://twitter.com/codeTrackLift" target="_blank"><img class="socialLogo"
-                src="../pics/Twitter_social_icons-circle-white.png" alt="Twitter Icon"></a>
-        <a href="https://www.linkedin.com/in/codebypete/" target="_blank"><img class="socialLogo"
-                src="../pics/linkedin_white.png" alt="LinkedIn Icon"></a> -->
-    </footer>
+    <footer id="footer" class="container-fluid"></footer>
 
     <!-- JS Libraries -->
     <script src="../libraries/bootstrap.min.js"></script>
-    <!-- <script src="../libraries/ScrollMagic.min.js"></script> -->
 
     <!-- My JS -->
     <script src="../js/footer.js"></script>
-    <script>setTimeout(injectMyFooter,4000)</script>
+    <script>setTimeout(injectMyFooter,3000)</script>
 </body>
 
 </html>
