blog article 5 prep

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -103,6 +103,37 @@
 
         <div class="accordion-item">
             <h2 class="accordion-header">
+                <button id='blog5Button' onclick="blog5Open()" class="accordion-button collapsed bg-transparent"
+                    type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne"
+                    aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                    <h6>blog<span style='color:dodgerblue'>[</span><span style="color:cornflowerblue">5</span><span
+                            style='color:dodgerblue'>]</span></h6>
+                    <h5>PacMan Factory & Eye Movement</h5>
+                </button>
+            </h2>
+            <div id="blog5" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingOne">
+                <div class="accordion-body">
+                    <div class="'container-fluid row">
+                        <h2>Thanks for visiting, this article is in development.</h2>
+
+                        <div class="text-end">
+                            <p>Happy coding!</p>
+                        </div>
+                        <div class="my-auto">
+                            <p style="text-align:end;font-style:italic;color:white;"><img
+                                    src="../pics/profilepic.jpg" alt="Picture of Pete"
+                                    style="width:5rem;border-radius:50%;margin:0 2rem -2rem 0;"> -
+                                Pete, Mar 15, 2022
+                            </p>
+                            <p style="text-align:end;font-style:italic;color:white;">Student @ MIT xPro</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div> <!-- accodion-item closing div -->
+
+        <div class="accordion-item">
+            <h2 class="accordion-header">
                 <button id='blog4Button' onclick="blog4Open()" class="accordion-button collapsed bg-transparent"
                     type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne"
                     aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
