--- a/pages/projects.html
+++ b/pages/projects.html
@@ -100,7 +100,7 @@
                 <p class="card-text">This <a href="https://xpro.mit.edu/" target="_blank">MIT xPro</a> <span>
                         Bootcamp Project</span> demonstrates use of 'onmouse' and 'ontouch' event handlers.</p>
                 <p class="card-text"><span>Custom CSS</span> 'aesthetics' and 'typewriter' text was added, see <a
-                        href="https://github.com/codeTrackLift/eyemovement" target="_blank"> Readme</a>.
+                        href="../pages/blog.html#blog5Button">blog[5]</a>.
                     <div class="btnContainer">
                         <a href="https://codetracklift.github.io/eyemovement/" class="btn btn-secondary"
                             target="_blank">Try Demo</a>
@@ -118,7 +118,7 @@
                 <p class="card-text">This <a href="https://xpro.mit.edu/" target="_blank">MIT xPro</a> <span>
                         Bootcamp Project</span> demonstrates use of array methods and DOM manipulation.</p>
                 <p class="card-text"><span>Custom features</span> include an 'Aqua' theme and <em>ZAP!</em> PacMan
-                    button, see <a href="https://github.com/codeTrackLift/pacmen_factory" target="_blank">Readme</a>.
+                    button, see <a href="../pages/blog.html#blog5Button">blog[5]</a>.
                     <div class="btnContainer">
                         <a href="https://codetracklift.github.io/pacmen_factory/" class="btn btn-secondary"
                             target="_blank">Try Demo</a>
@@ -136,7 +136,7 @@
                 <p class="card-text">This coding exercise was <span>customized</span> into a '<span>mini-game</span>'
                     with collision detection and score tracking. </p>
                 <p class="card-text">This is <span>fully responsive</span> and accepts keyboard, mouse, and mobile
-                    screen inputs! See <a href='../pages/blog.html#blog3'>Blog Post</a>.</p>
+                    screen inputs! See <a href='../pages/blog.html#blog3Button'>blog[3]</a>.</p>
                 <div class="btnContainer">
                     <a href="https://codetracklift.github.io/pacman/" class="btn btn-secondary" target="_blank">Play
                         Game</a>
@@ -247,7 +247,9 @@
 
     <!-- My JS -->
     <script src="../js/footer.js"></script>
-    <script>injectMyFooter()</script>
+    <script>
+        injectMyFooter()
+    </script>
 </body>
 
 </html>
